business card part 1

--- a/coffee Menu/styles.css
+++ b/coffee Menu/styles.css
@@ -86,6 +86,15 @@ address {
 a {
   color: black;
 }
-a:hover{
+
+a:visited {
+  color: black;
+}
+
+a:hover {
+  color: brown;
+}
+
+a:active {
   color: brown;
 }
